# ComfyUI-IC-Light-Wrapper

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
examples/: IC-Light_example_spotlight_01.json  iclight_spotlight_batch_example.json
hidiffusion/: hidiffusion.py
