[project]
name = "comfyui-ic-light-wrapper"
description = "ComfyUI wrapper node to test LaVi-Bridge using Diffusers"
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers>=0.27.2", "accelerate>=0.29.2", "omegaconf"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-IC-Light-Wrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-IC-Light-Wrapper"
Icon = ""
